fix fucked up UI on mobile

--- a/css/ui.css
+++ b/css/ui.css
@@ -15,25 +15,26 @@
 .dFlexWrap_PvZ2DleGuessBox > * {
     border: 2px solid rgb(96 139 168);
     border-radius: 5px;
-    font-size:20px;
+    font-size:18px;
     height:45px;
     text-align:center;
-    width: calc((100% - 37px) / 9);
+    width: 109px;
+    flex: 0 0 auto;
     background-color: lightblue;
 }
 
 .dFlexWrap_PvZ2DleGuessBox {
     border: 2px dotted rgb(96 139 168);
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(9, 109px);
+    gap: 4px;
     position: absolute;
-    overflow-x: hidden;
-    overflow-y: auto;
-    left: 11.5%;
+    overflow: auto;
+    left: 10%;
     z-index:1000;
     top: 160px;
     height: 60%;
-    width: 77%;
+    width: 80%;
     padding-top: 8px;
     background-color: beige;
     align-content: start;
@@ -45,7 +46,8 @@
     font-size:20px;
     height:45px;
     text-align:center;
-    width: calc((100% - 37px) / 9);
+    width: 110px;
+    flex: 0 0 auto;
     padding-top:5px;
     position:relative;
     background-color: lightblue;
@@ -53,25 +55,18 @@
 
 .dFlexWrap_PvZ2DleItem {
     border: 2px dotted rgb(96 139 168);
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(9, 110px);
+    gap: 4.5px;
     position: absolute;
-    overflow-x: hidden;
-    overflow-y: auto;
-    left: 10%;
+    overflow: auto;
+    left: 9%;
     top: 160px;
     height: 70%;
-    width: 80%;
+    width: 81%;
     padding-top: 8px;
     align-content: start;
     background: rgba(0,0,0,0.8);
-}
-
-.Flex_break {
-    flex-basis: 100%;
-    height: 5px;
-    background: none;
-    border: none;
 }
 
 .Button {
